--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^3.1.1",
+    "socket.io-client": "1.7.0",
     "socketio-file-upload": "^0.7.3",
     "timeago-react": "^3.0.2",
     "uuid": "^8.3.2"
